# better_logger

./: .gitignore  AGENTS.md  CLAUDE.md  MEMORY.md  README.MD  pyproject.toml
better_logger/: __init__.py  decorators.py  middleware.py
examples/: basic.py  basic_ollama.py  success.py
examples/fastapi_app/: __init__.py  app.db  db.py  main.py  run.py
narrative/: __init__.py
narrative/analyzers/: __init__.py  ollama.py
narrative/renderer/: console.py
runtime_narrative/: stage.py  story.py
runtime_narrative_logging.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: __init__.py  conftest.py  test_async_renderer.py  test_decorators.py  test_diagnostics.py  test_failure.py  test_json_renderer.py  test_middleware.py  test_stage.py  test_story.py
