[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "runtime-narrative-logging"
version = "0.1.0"
description = "Runtime narrative logging for human-readable execution stories"
readme = "README.MD"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.116.0,<1.0.0",
    "typer>=0.23.0,<1.0.0",
    "uvicorn>=0.35.0,<1.0.0",
]

[tool.setuptools]
packages = ["narrative", "narrative.renderer", "narrative.analyzers"]
